Fix login page spacing on mobile

--- a/login.manchester.ac.uk.scss
+++ b/login.manchester.ac.uk.scss
@@ -8,9 +8,10 @@ a, a:link {
 html, body, body#cas {
 	background: $background;
 }
-body > #container {
+#container {
 	background: transparent;
 	width: auto;
+	padding: 2rem;
 }
 #content {
 	overflow: visible;
